# aicare-desk

./: .gitignore  阶段性文档.md
backend/agent-service/: README.md  pyproject.toml
backend/agent-service/src/aicare_agent_service/: main.py  schemas.py
backend/agent-service/tests/: test_health.py
backend/platform-api/: pom.xml
docs/: stage-0-traceability.md
docs/adr/: 0001-monorepo-and-application-layout.md  0002-modular-monolith-and-agent-boundary.md  0003-local-development-topology.md
docs/api/: api-standards.md  event-contracts.md
docs/architecture/: context-and-containers.md  module-boundaries.md
docs/data/: core-data-model.md
docs/domain/: state-machines.md
docs/operations/: non-functional-requirements.md
docs/product/: acceptance-criteria.md  actors-and-capabilities.md  glossary.md  product-brief.md  use-cases.md
docs/security/: access-control-matrix.md  threat-model.md
docs/superpowers/plans/: 2026-06-22-stage-0-requirements-architecture-baseline.md
docs/superpowers/specs/: 2026-06-21-ai-after-sales-platform-development-design.md  项目概要.md
frontend/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/customer-web/: index.html  package.json
frontend/customer-web/src/: main.tsx  styles.css
frontend/staff-web/: index.html  package.json
frontend/staff-web/src/: main.tsx  styles.css
resources/config/: .editorconfig  .env.example
resources/docs/: stage-0-traceability.md
resources/scripts/: start-core.ps1  stop-core.ps1  verify-stage0.ps1  verify-stage1.ps1  verify-vm-core.ps1
scripts/: verify-stage0.ps1
(+49 files in other folders)
